--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,12 +3,18 @@
 {% block content %}
 <div class="min-h-full flex flex-col justify-center py-12 sm:px-6 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-md">
-        <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">Sign in to your account</h2>
+        <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">Sign in as {{ role|capitalize }}</h2>
+        <p class="mt-2 text-center text-sm text-gray-600">
+            <a href="{{ url_for('auth.login') }}" class="font-medium text-indigo-600 hover:text-indigo-500">
+                Change Role
+            </a>
+        </p>
     </div>
 
     <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
         <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-            <form class="space-y-6" action="{{ url_for('auth.login') }}" method="POST">
+            <form class="space-y-6" action="{{ url_for('auth.login', role=role) }}" method="POST">
+                <input type="hidden" name="role" value="{{ role }}">
                 <div>
                     <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
                     <div class="mt-1">
