--- a/app/admin/templates/base_admin.html
+++ b/app/admin/templates/base_admin.html
@@ -47,6 +47,12 @@
                 </svg>
                 Attendance
             </a>
+            <a href="{{ url_for('admin.timetable_landing') }}" class="group flex items-center px-4 py-2 text-sm font-medium rounded-md text-gray-300 hover:bg-gray-700 hover:text-white">
+                <svg class="mr-3 h-6 w-6 text-gray-400 group-hover:text-gray-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                </svg>
+                Timetable
+            </a>
         </nav>
     </div>
 
