--- a/app/admin/templates/exams/schedule_exam.html
+++ b/app/admin/templates/exams/schedule_exam.html
@@ -62,6 +62,9 @@
                 <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none">
                     Save Schedule
                 </button>
+                <button type="submit" name="action" value="publish" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none ml-3" onclick="return confirm('Are you sure you want to publish this schedule? Students will be able to view it.')">
+                    Publish Schedule
+                </button>
             </div>
         </div>
     </form>
