--- a/app/admin/templates/exams/dashboard.html
+++ b/app/admin/templates/exams/dashboard.html
@@ -51,7 +51,7 @@
                                     <a href="{{ url_for('admin.exams.schedule_exam', event_id=event.id) }}" class="text-indigo-600 hover:text-indigo-900 mr-4">Edit</a>
                                     {% endif %}
                                     <a href="{{ url_for('admin.exams.view_schedule', event_id=event.id) }}" class="text-gray-600 hover:text-gray-900 mr-4">View</a>
-                                    <!-- Future: Results Link -->
+                                    <a href="{{ url_for('admin.exams.recandidates_report', event_id=event.id) }}" class="text-red-600 hover:text-red-900">Re-candidates</a>
                                 </td>
                             </tr>
                             {% endfor %}
