--- a/app/faculty/templates/faculty/fees.html
+++ b/app/faculty/templates/faculty/fees.html
@@ -57,7 +57,7 @@
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                             {% if rec.status != 'Paid' %}
-                            <button onclick="markAsPaid(this, {{ rec.id }})" class="text-indigo-600 hover:text-indigo-900 font-medium">
+                            <button onclick="markAsPaid(this,' {{ rec.id }}')" class="text-indigo-600 hover:text-indigo-900 font-medium">
                                 Mark as Paid
                             </button>
                             {% else %}
